# Assessment_Exinity

./: README.md
src/: .clang-format  .gitignore  CMakeLists.txt
src/Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/Common/: CMakeLists.txt  logger.cpp  logger.h
src/Server/: CMakeLists.txt  dumper.cpp  dumper.h  main.cpp  numberstore.cpp  numberstore.h  server.cpp  server.h
